Bug #40196
rgw_file: fix invalidation of top-level directories
% Done:
0%
Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Description
Originally, root_fh was reachable from RGWLibFS::fh_cache, but
this was problematic as it has infinite lifetime and so is not
present in RGWLibFS::fs_lru.
To fix the above, RGWLibFS::root_fh came to live unhooked from the
handle caches which works because nfs-ganesha/the application
always has an instance handle. However, this silently breaks
READDIR event invalidation.
Related issues
History
#1 Updated by Matt Benjamin almost 2 years ago
- Pull request ID set to 28440
#2 Updated by Matt Benjamin almost 2 years ago
- Status changed from In Progress to Fix Under Review
#3 Updated by Matt Benjamin almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
- Backport set to nautilus, mimic, luminous
#4 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40214: luminous: rgw_file: fix invalidation of top-level directories added
#5 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40215: mimic: rgw_file: fix invalidation of top-level directories added
#6 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40216: nautilus: rgw_file: fix invalidation of top-level directories added
#7 Updated by Nathan Cutler 3 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".