rgw_file: permit lookup_handle to lookup root_fh

Originally, root_fh was reachable from RGWLibFS::fh_cache, but
this was problematic as it has infinite lifetime and so is not
present in RGWLibFS::fs_lru.

To fix the above, RGWLibFS::root_fh came to live unhooked from the
handle caches which works because nfs-ganesha/the application
always has an instance handle.  However, this silently breaks
READDIR event invalidation.

Fixes: https://tracker.ceph.com/issues/40196
Resolves: rhbz#1715954

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 547cb9f87b72440cb8a1d496ac5cfb37b2d83cc7)